# gaussian-rio-cpp

./: .gitignore  README.md
scripts/: evaluate_ntu4dradlm.py  evaluate_snailradar.py  ntu4dradlm.yaml  rio-gaussian-abl.yaml  rio-gaussian-ars.yaml  rio-gaussian-eagle.yaml  rio-gicp.yaml  rio-ndt.yaml  rio-vgicp.yaml  run-ntu4dradlm.sh  run-snail-radar.sh  snail-radar.yaml
upo_gaussian_tester/: CMakeLists.txt  config.hpp  package.xml  ros_utils.hpp  run_offline.cpp
upo_gaussians/: CMakeLists.txt  package.xml
upo_gaussians/include/upo_gaussians/: bisecting_kmeans.hpp  convention.hpp  gaussian_model.hpp  imu.hpp  kalman_core.hpp  radar.hpp  rio_base.hpp  rio_gaussian.hpp  rio_gicp.hpp  rio_ndt.hpp  sph.hpp  traj.hpp  types.hpp
upo_gaussians/src/: ceres_helper.hpp  correction.hpp  cuda_helper.hpp  fit_kernels.cu  gaussian_fitting.cpp  gaussian_fitting.hpp  gaussian_fitting_abl.cpp  gaussian_fitting_server.cpp  gaussian_io.cpp  gaussian_rcs.cpp  gaussian_scan_matching.cpp  gaussian_scan_matching.hpp  icg_kernels.cu  kalman_core.cpp  radar.cpp  rio_base.cpp  rio_gaussian.cpp  rio_gicp.cpp  rio_ndt.cpp  traj.cpp
