<?xml version="1.0"?>
<package format="3">
	<name>upo_gaussians</name>
	<version>1.0.0</version>
	<description>Gaussian odometry developed at Universidad Pablo de Olavide</description>
	<maintainer email="famozur@upo.es">Fernando Amodeo</maintainer>
	<license>MIT</license>
	<author>Fernando Amodeo</author>

	<build_depend>ros_environment</build_depend>

	<!-- ROS 1 uses Catkin ðŸ± -->
	<buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
	<!-- <depend condition="$ROS_VERSION == 1">dep goes here</depend> -->

	<!-- ROS 2 uses Ament/Colcon -->
	<buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
	<depend condition="$ROS_VERSION == 2">rclcpp</depend>
	<!-- <depend condition="$ROS_VERSION == 2">dep goes here</depend> -->

	<depend>eigen</depend>
	<depend>small_gicp</depend>

	<export>
		<build_type condition="$ROS_VERSION == 1">catkin</build_type>
		<build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
	</export>
</package>
